k8s/dev0/prom-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom
  namespace: istio-system
spec:
  ingressClassName: nginx
  rules:
    - host: prom.dev0.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
